chnaged image alts

--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -2,8 +2,8 @@
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: coding.png
-alt: image-alt
+img: gallery.png
+alt: Photo Gallery
 project-date: April 2014
 client: Start Bootstrap
 category: Programming
