--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -3,7 +3,7 @@ layout: default
 modal-id: 5
 date: 2014-07-14
 img: sports.png
-alt: image-alt
+alt: Sports
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
