--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -3,7 +3,7 @@ layout: default
 modal-id: 3
 date: 2014-07-16
 img: umich.png
-alt: image-alt
+alt: University of Michigan
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
