--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -4,9 +4,5 @@ modal-id: 5
 date: 2014-07-14
 img: sports.png
 alt: Sports
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
-
+description: I've always been sportive in some way or the other, I love playing soccer and this summer, I started running! I hope to one day run a half marathon but doubt that my lung capacity will permit that - my best so far is 8km/5mi. I've also been riding horses since I was 8! I grew up next to the racecourse in Chennai, India and have been facsinated by the majesty of the animals. I learned how to ride on unruly retired race horses and woke up at 5am everyday, 6 days a week to hop across the wall and go for my lesson. 
 ---
