--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -4,9 +4,6 @@ modal-id: 3
 date: 2014-07-16
 img: umich.png
 alt: University of Michigan
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+description: At the University of Michigan, I'm involved in the University's oldest and largest entrepreneurship organization - <a href="https://mpowered.umich.edu/">MPowered Entrepreneruship</a> where I am the Vice President of Consulting. We provide students at the University an opportunity to work directly with startups and complete projects in weekly sprints, actively interacting with CEOs and learning about the start up ecosystem, while gaining tangible skills and working on projects that have a direct impact on the companies. 
 
 ---
