--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: @ the U of M
+title: The U of M
 modal-id: 3
 date: 2014-07-16
 img: umich.png
 alt: University of Michigan
-description: At the University of Michigan, I'm involved in the University's oldest and largest entrepreneurship organization - <a href="https://mpowered.umich.edu/">MPowered Entrepreneruship</a> where I am the Vice President of Consulting. We provide students at the University an opportunity to work directly with startups and complete projects in weekly sprints, actively interacting with CEOs and learning about the start up ecosystem, while gaining tangible skills and working on projects that have a direct impact on the companies. 
+description: At the University of Michigan, 
 
 ---
